test/scc/expr/semantic-errors/138.a
138.t:2:10: error: initializer element is not constant